fix title size on mobile devices

--- a/src/widgets/ProjectList/ui/Project/Project.module.scss
+++ b/src/widgets/ProjectList/ui/Project/Project.module.scss
@@ -75,4 +75,16 @@
   .demo {
     display: none;
   }
+
+  .heading {
+
+
+    flex-direction: column-reverse;
+
+    align-items: flex-start;
+  }
+
+  .title {
+    max-width: 100%;
+  }
 }
